ass2_try/y.output
   0  $accept : program $end

   1  program : program func
   2          | func

   3  func : func_method
   4       | func_class

   5  $$1 :

   6  $$2 :

   7  func_method : METHOD VOID ID LP_BRACE RP_BRACE $$1 LC_BRACE body $$2 RC_BRACE

   8  $$3 :

   9  $$4 :

  10  func_method : METHOD RETURN_TYPE_FUNC ID LSQ_BRACE ARGUMENTS RSQ_BRACE LP_BRACE args RP_BRACE $$3 LC_BRACE body $$4 RC_BRACE

  11  args : args COMMA arg
  12       | arg

  13  arg : RETURN_TYPE_FUNC ID

  14  $$5 :

  15  func_class : CLASS ID LP_BRACE RP_BRACE $$5 LC_BRACE body_class RC_BRACE

  16  $$6 :

  17  func_class : CLASS ID LSQ_BRACE ARGUMENTS RSQ_BRACE $$6 LC_BRACE body_class_methods RC_BRACE

  18  body : body_method

  19  body_method : body_method rest
  20              | rest

  21  rest : LC_BRACE body_method RC_BRACE
  22       | rest_m

  23  rest_m : decls
  24         | stmts
  25         | exp_stmt
  26         | calls
  27         | return_stmt
  28         | return_stmt_void

  29  $$7 :

  30  rest_m : RETURN $$7 calls

  31  body_class : body_class rest_class
  32             | rest_class

  33  rest_class : unary_stmts SEMICOLON
  34             | decls

  35  body_class_methods : body_class_methods rest_class_methods
  36                     | rest_class_methods

  37  rest_class_methods : stmts
  38                     | decls
  39                     | exp_stmt
  40                     | calls
  41                     | func_method

  42  return_stmt : RETURN TRUE_KEY SEMICOLON
  43              | RETURN FALSE_KEY SEMICOLON
  44              | RETURN ID SEMICOLON

  45  return_stmt_void : RETURN VOID SEMICOLON

  46  stmts : loops
  47        | cond_stmts
  48        | unary_stmts SEMICOLON

  49  $$8 :

  50  loops : LOOP WHILE LP_BRACE predicate RP_BRACE $$8 DO LC_BRACE body RC_BRACE

  51  $$9 :

  52  loops : FOR LP_BRACE exp_stmt predicate SEMICOLON unary_stmts RP_BRACE $$9 LC_BRACE body RC_BRACE

  53  $$10 :

  54  loops : FOR LP_BRACE exp_stmt predicate SEMICOLON RP_BRACE $$10 LC_BRACE body RC_BRACE

  55  cond_stmts : if_stmt otherwise_stmt
  56             | if_stmt

  57  $$11 :

  58  if_stmt : IF LP_BRACE predicate RP_BRACE $$11 DO LC_BRACE body RC_BRACE

  59  $$12 :

  60  otherwise_stmt : ELSE $$12 LC_BRACE body RC_BRACE

  61  decls : DECLARATION RETURN_TYPE_FUNC dec SEMICOLON
  62        | DECLARATION ID dec SEMICOLON

  63  dec : dec COMMA ID
  64      | ID

  65  exp_stmt : EXPRESSION ID ASSIGN assign_exp SEMICOLON

  66  assign_exp : unary_stmts
  67             | INTEGERS
  68             | ARGUMENTS
  69             | ID
  70             | "true"
  71             | "false"
  72             | ADD LP_BRACE assign_exp COMMA assign_exp RP_BRACE
  73             | SUB LP_BRACE assign_exp COMMA assign_exp RP_BRACE
  74             | MUL LP_BRACE assign_exp COMMA assign_exp RP_BRACE
  75             | DIV LP_BRACE assign_exp COMMA assign_exp RP_BRACE
  76             | LP_BRACE assign_exp RP_BRACE

  77  calls : CALL_STMT ID CALL_OP ID LSQ_BRACE ARGUMENTS RSQ_BRACE LP_BRACE INTEGERS RP_BRACE SEMICOLON
  78        | CALL_STMT "this" CALL_OP ID LSQ_BRACE ARGUMENTS RSQ_BRACE LP_BRACE INTEGERS RP_BRACE SEMICOLON
  79        | CALL_STMT ID CALL_OP ID LSQ_BRACE ARGUMENTS RSQ_BRACE LP_BRACE ARGUMENTS RP_BRACE SEMICOLON
  80        | CALL_STMT "this" CALL_OP ID LSQ_BRACE ARGUMENTS RSQ_BRACE LP_BRACE ARGUMENTS RP_BRACE SEMICOLON
  81        | CALL_STMT ID CALL_OP ID LP_BRACE RP_BRACE SEMICOLON
  82        | CALL_STMT ID LP_BRACE RP_BRACE SEMICOLON
  83        | CALL_STMT ID LSQ_BRACE ARGUMENTS RSQ_BRACE LP_BRACE INTEGERS RP_BRACE SEMICOLON
  84        | CALL_STMT ID LSQ_BRACE ARGUMENTS RSQ_BRACE LP_BRACE ARGUMENTS RP_BRACE SEMICOLON

  85  unary_stmts : POSTINCR LP_BRACE extras RP_BRACE
  86              | POSTDECR LP_BRACE extras RP_BRACE

  87  predicate : predicate AND predicate
  88            | predicate OR predicate
  89            | predicate PREDICATE_OP predicate
  90            | LP_BRACE predicate RP_BRACE
  91            | expr_pred

  92  expr_pred : arth_pred
  93            | NEG expr_pred
  94            | expr_pred ASSIGN NEG expr_pred
  95            | calls

  96  arth_pred : ADD LP_BRACE expr_pred COMMA expr_pred RP_BRACE
  97            | SUB LP_BRACE expr_pred COMMA expr_pred RP_BRACE
  98            | MUL LP_BRACE expr_pred COMMA expr_pred RP_BRACE
  99            | DIV LP_BRACE expr_pred COMMA expr_pred RP_BRACE
 100            | extras

 101  extras :
 102         | unary_stmts
 103         | ID
 104         | INTEGERS
 105         | ARGUMENTS

state 0
	$accept : . program $end  (0)

	CLASS  shift 1
	METHOD  shift 2
	.  error

	program  goto 3
	func  goto 4
	func_method  goto 5
	func_class  goto 6


state 1
	func_class : CLASS . ID LP_BRACE RP_BRACE $$5 LC_BRACE body_class RC_BRACE  (15)
	func_class : CLASS . ID LSQ_BRACE ARGUMENTS RSQ_BRACE $$6 LC_BRACE body_class_methods RC_BRACE  (17)

	ID  shift 7
	.  error


state 2
	func_method : METHOD . VOID ID LP_BRACE RP_BRACE $$1 LC_BRACE body $$2 RC_BRACE  (7)
	func_method : METHOD . RETURN_TYPE_FUNC ID LSQ_BRACE ARGUMENTS RSQ_BRACE LP_BRACE args RP_BRACE $$3 LC_BRACE body $$4 RC_BRACE  (10)

	RETURN_TYPE_FUNC  shift 8
	VOID  shift 9
	.  error


state 3
	$accept : program . $end  (0)
	program : program . func  (1)

	$end  accept
	CLASS  shift 1
	METHOD  shift 2
	.  error

	func  goto 10
	func_method  goto 5
	func_class  goto 6


state 4
	program : func .  (2)

	.  reduce 2


state 5
	func : func_method .  (3)

	.  reduce 3


state 6
	func : func_class .  (4)

	.  reduce 4


state 7
	func_class : CLASS ID . LP_BRACE RP_BRACE $$5 LC_BRACE body_class RC_BRACE  (15)
	func_class : CLASS ID . LSQ_BRACE ARGUMENTS RSQ_BRACE $$6 LC_BRACE body_class_methods RC_BRACE  (17)

	LP_BRACE  shift 11
	LSQ_BRACE  shift 12
	.  error


state 8
	func_method : METHOD RETURN_TYPE_FUNC . ID LSQ_BRACE ARGUMENTS RSQ_BRACE LP_BRACE args RP_BRACE $$3 LC_BRACE body $$4 RC_BRACE  (10)

	ID  shift 13
	.  error


state 9
	func_method : METHOD VOID . ID LP_BRACE RP_BRACE $$1 LC_BRACE body $$2 RC_BRACE  (7)

	ID  shift 14
	.  error


state 10
	program : program func .  (1)

	.  reduce 1


state 11
	func_class : CLASS ID LP_BRACE . RP_BRACE $$5 LC_BRACE body_class RC_BRACE  (15)

	RP_BRACE  shift 15
	.  error


state 12
	func_class : CLASS ID LSQ_BRACE . ARGUMENTS RSQ_BRACE $$6 LC_BRACE body_class_methods RC_BRACE  (17)

	ARGUMENTS  shift 16
	.  error


state 13
	func_method : METHOD RETURN_TYPE_FUNC ID . LSQ_BRACE ARGUMENTS RSQ_BRACE LP_BRACE args RP_BRACE $$3 LC_BRACE body $$4 RC_BRACE  (10)

	LSQ_BRACE  shift 17
	.  error


state 14
	func_method : METHOD VOID ID . LP_BRACE RP_BRACE $$1 LC_BRACE body $$2 RC_BRACE  (7)

	LP_BRACE  shift 18
	.  error


state 15
	func_class : CLASS ID LP_BRACE RP_BRACE . $$5 LC_BRACE body_class RC_BRACE  (15)
	$$5 : .  (14)

	.  reduce 14

	$$5  goto 19


state 16
	func_class : CLASS ID LSQ_BRACE ARGUMENTS . RSQ_BRACE $$6 LC_BRACE body_class_methods RC_BRACE  (17)

	RSQ_BRACE  shift 20
	.  error


state 17
	func_method : METHOD RETURN_TYPE_FUNC ID LSQ_BRACE . ARGUMENTS RSQ_BRACE LP_BRACE args RP_BRACE $$3 LC_BRACE body $$4 RC_BRACE  (10)

	ARGUMENTS  shift 21
	.  error


state 18
	func_method : METHOD VOID ID LP_BRACE . RP_BRACE $$1 LC_BRACE body $$2 RC_BRACE  (7)

	RP_BRACE  shift 22
	.  error


state 19
	func_class : CLASS ID LP_BRACE RP_BRACE $$5 . LC_BRACE body_class RC_BRACE  (15)

	LC_BRACE  shift 23
	.  error


state 20
	func_class : CLASS ID LSQ_BRACE ARGUMENTS RSQ_BRACE . $$6 LC_BRACE body_class_methods RC_BRACE  (17)
	$$6 : .  (16)

	.  reduce 16

	$$6  goto 24


state 21
	func_method : METHOD RETURN_TYPE_FUNC ID LSQ_BRACE ARGUMENTS . RSQ_BRACE LP_BRACE args RP_BRACE $$3 LC_BRACE body $$4 RC_BRACE  (10)

	RSQ_BRACE  shift 25
	.  error


state 22
	func_method : METHOD VOID ID LP_BRACE RP_BRACE . $$1 LC_BRACE body $$2 RC_BRACE  (7)
	$$1 : .  (5)

	.  reduce 5

	$$1  goto 26


state 23
	func_class : CLASS ID LP_BRACE RP_BRACE $$5 LC_BRACE . body_class RC_BRACE  (15)

	DECLARATION  shift 27
	POSTINCR  shift 28
	POSTDECR  shift 29
	.  error

	body_class  goto 30
	decls  goto 31
	rest_class  goto 32
	unary_stmts  goto 33


state 24
	func_class : CLASS ID LSQ_BRACE ARGUMENTS RSQ_BRACE $$6 . LC_BRACE body_class_methods RC_BRACE  (17)

	LC_BRACE  shift 34
	.  error


state 25
	func_method : METHOD RETURN_TYPE_FUNC ID LSQ_BRACE ARGUMENTS RSQ_BRACE . LP_BRACE args RP_BRACE $$3 LC_BRACE body $$4 RC_BRACE  (10)

	LP_BRACE  shift 35
	.  error


state 26
	func_method : METHOD VOID ID LP_BRACE RP_BRACE $$1 . LC_BRACE body $$2 RC_BRACE  (7)

	LC_BRACE  shift 36
	.  error


state 27
	decls : DECLARATION . RETURN_TYPE_FUNC dec SEMICOLON  (61)
	decls : DECLARATION . ID dec SEMICOLON  (62)

	RETURN_TYPE_FUNC  shift 37
	ID  shift 38
	.  error


state 28
	unary_stmts : POSTINCR . LP_BRACE extras RP_BRACE  (85)

	LP_BRACE  shift 39
	.  error


state 29
	unary_stmts : POSTDECR . LP_BRACE extras RP_BRACE  (86)

	LP_BRACE  shift 40
	.  error


state 30
	func_class : CLASS ID LP_BRACE RP_BRACE $$5 LC_BRACE body_class . RC_BRACE  (15)
	body_class : body_class . rest_class  (31)

	RC_BRACE  shift 41
	DECLARATION  shift 27
	POSTINCR  shift 28
	POSTDECR  shift 29
	.  error

	decls  goto 31
	rest_class  goto 42
	unary_stmts  goto 33


state 31
	rest_class : decls .  (34)

	.  reduce 34


state 32
	body_class : rest_class .  (32)

	.  reduce 32


state 33
	rest_class : unary_stmts . SEMICOLON  (33)

	SEMICOLON  shift 43
	.  error


state 34
	func_class : CLASS ID LSQ_BRACE ARGUMENTS RSQ_BRACE $$6 LC_BRACE . body_class_methods RC_BRACE  (17)

	IF  shift 44
	FOR  shift 45
	METHOD  shift 2
	DECLARATION  shift 27
	EXPRESSION  shift 46
	CALL_STMT  shift 47
	LOOP  shift 48
	POSTINCR  shift 28
	POSTDECR  shift 29
	.  error

	func_method  goto 49
	body_class_methods  goto 50
	decls  goto 51
	stmts  goto 52
	exp_stmt  goto 53
	calls  goto 54
	unary_stmts  goto 55
	rest_class_methods  goto 56
	loops  goto 57
	cond_stmts  goto 58
	if_stmt  goto 59


state 35
	func_method : METHOD RETURN_TYPE_FUNC ID LSQ_BRACE ARGUMENTS RSQ_BRACE LP_BRACE . args RP_BRACE $$3 LC_BRACE body $$4 RC_BRACE  (10)

	RETURN_TYPE_FUNC  shift 60
	.  error

	args  goto 61
	arg  goto 62


state 36
	func_method : METHOD VOID ID LP_BRACE RP_BRACE $$1 LC_BRACE . body $$2 RC_BRACE  (7)

	IF  shift 44
	FOR  shift 45
	DECLARATION  shift 27
	EXPRESSION  shift 46
	CALL_STMT  shift 47
	RETURN  shift 63
	LC_BRACE  shift 64
	LOOP  shift 48
	POSTINCR  shift 28
	POSTDECR  shift 29
	.  error

	body  goto 65
	body_method  goto 66
	rest  goto 67
	rest_m  goto 68
	decls  goto 69
	stmts  goto 70
	exp_stmt  goto 71
	calls  goto 72
	return_stmt  goto 73
	return_stmt_void  goto 74
	unary_stmts  goto 55
	loops  goto 57
	cond_stmts  goto 58
	if_stmt  goto 59


state 37
	decls : DECLARATION RETURN_TYPE_FUNC . dec SEMICOLON  (61)

	ID  shift 75
	.  error

	dec  goto 76


state 38
	decls : DECLARATION ID . dec SEMICOLON  (62)

	ID  shift 75
	.  error

	dec  goto 77


state 39
	unary_stmts : POSTINCR LP_BRACE . extras RP_BRACE  (85)
	extras : .  (101)

	POSTINCR  shift 28
	POSTDECR  shift 29
	INTEGERS  shift 78
	ID  shift 79
	ARGUMENTS  shift 80
	RP_BRACE  reduce 101

	unary_stmts  goto 81
	extras  goto 82


state 40
	unary_stmts : POSTDECR LP_BRACE . extras RP_BRACE  (86)
	extras : .  (101)

	POSTINCR  shift 28
	POSTDECR  shift 29
	INTEGERS  shift 78
	ID  shift 79
	ARGUMENTS  shift 80
	RP_BRACE  reduce 101

	unary_stmts  goto 81
	extras  goto 83


state 41
	func_class : CLASS ID LP_BRACE RP_BRACE $$5 LC_BRACE body_class RC_BRACE .  (15)

	.  reduce 15


state 42
	body_class : body_class rest_class .  (31)

	.  reduce 31


state 43
	rest_class : unary_stmts SEMICOLON .  (33)

	.  reduce 33


state 44
	if_stmt : IF . LP_BRACE predicate RP_BRACE $$11 DO LC_BRACE body RC_BRACE  (58)

	LP_BRACE  shift 84
	.  error


state 45
	loops : FOR . LP_BRACE exp_stmt predicate SEMICOLON unary_stmts RP_BRACE $$9 LC_BRACE body RC_BRACE  (52)
	loops : FOR . LP_BRACE exp_stmt predicate SEMICOLON RP_BRACE $$10 LC_BRACE body RC_BRACE  (54)

	LP_BRACE  shift 85
	.  error


state 46
	exp_stmt : EXPRESSION . ID ASSIGN assign_exp SEMICOLON  (65)

	ID  shift 86
	.  error


state 47
	calls : CALL_STMT . ID CALL_OP ID LSQ_BRACE ARGUMENTS RSQ_BRACE LP_BRACE INTEGERS RP_BRACE SEMICOLON  (77)
	calls : CALL_STMT . "this" CALL_OP ID LSQ_BRACE ARGUMENTS RSQ_BRACE LP_BRACE INTEGERS RP_BRACE SEMICOLON  (78)
	calls : CALL_STMT . ID CALL_OP ID LSQ_BRACE ARGUMENTS RSQ_BRACE LP_BRACE ARGUMENTS RP_BRACE SEMICOLON  (79)
	calls : CALL_STMT . "this" CALL_OP ID LSQ_BRACE ARGUMENTS RSQ_BRACE LP_BRACE ARGUMENTS RP_BRACE SEMICOLON  (80)
	calls : CALL_STMT . ID CALL_OP ID LP_BRACE RP_BRACE SEMICOLON  (81)
	calls : CALL_STMT . ID LP_BRACE RP_BRACE SEMICOLON  (82)
	calls : CALL_STMT . ID LSQ_BRACE ARGUMENTS RSQ_BRACE LP_BRACE INTEGERS RP_BRACE SEMICOLON  (83)
	calls : CALL_STMT . ID LSQ_BRACE ARGUMENTS RSQ_BRACE LP_BRACE ARGUMENTS RP_BRACE SEMICOLON  (84)

	ID  shift 87
	"this"  shift 88
	.  error


state 48
	loops : LOOP . WHILE LP_BRACE predicate RP_BRACE $$8 DO LC_BRACE body RC_BRACE  (50)

	WHILE  shift 89
	.  error


state 49
	rest_class_methods : func_method .  (41)

	.  reduce 41


state 50
	func_class : CLASS ID LSQ_BRACE ARGUMENTS RSQ_BRACE $$6 LC_BRACE body_class_methods . RC_BRACE  (17)
	body_class_methods : body_class_methods . rest_class_methods  (35)

	RC_BRACE  shift 90
	IF  shift 44
	FOR  shift 45
	METHOD  shift 2
	DECLARATION  shift 27
	EXPRESSION  shift 46
	CALL_STMT  shift 47
	LOOP  shift 48
	POSTINCR  shift 28
	POSTDECR  shift 29
	.  error

	func_method  goto 49
	decls  goto 51
	stmts  goto 52
	exp_stmt  goto 53
	calls  goto 54
	unary_stmts  goto 55
	rest_class_methods  goto 91
	loops  goto 57
	cond_stmts  goto 58
	if_stmt  goto 59


state 51
	rest_class_methods : decls .  (38)

	.  reduce 38


state 52
	rest_class_methods : stmts .  (37)

	.  reduce 37


state 53
	rest_class_methods : exp_stmt .  (39)

	.  reduce 39


state 54
	rest_class_methods : calls .  (40)

	.  reduce 40


state 55
	stmts : unary_stmts . SEMICOLON  (48)

	SEMICOLON  shift 92
	.  error


state 56
	body_class_methods : rest_class_methods .  (36)

	.  reduce 36


state 57
	stmts : loops .  (46)

	.  reduce 46


state 58
	stmts : cond_stmts .  (47)

	.  reduce 47


state 59
	cond_stmts : if_stmt . otherwise_stmt  (55)
	cond_stmts : if_stmt .  (56)

	ELSE  shift 93
	RC_BRACE  reduce 56
	IF  reduce 56
	FOR  reduce 56
	METHOD  reduce 56
	DECLARATION  reduce 56
	EXPRESSION  reduce 56
	CALL_STMT  reduce 56
	RETURN  reduce 56
	LC_BRACE  reduce 56
	LOOP  reduce 56
	POSTINCR  reduce 56
	POSTDECR  reduce 56

	otherwise_stmt  goto 94


state 60
	arg : RETURN_TYPE_FUNC . ID  (13)

	ID  shift 95
	.  error


state 61
	func_method : METHOD RETURN_TYPE_FUNC ID LSQ_BRACE ARGUMENTS RSQ_BRACE LP_BRACE args . RP_BRACE $$3 LC_BRACE body $$4 RC_BRACE  (10)
	args : args . COMMA arg  (11)

	RP_BRACE  shift 96
	COMMA  shift 97
	.  error


state 62
	args : arg .  (12)

	.  reduce 12


state 63
	rest_m : RETURN . $$7 calls  (30)
	return_stmt : RETURN . TRUE_KEY SEMICOLON  (42)
	return_stmt : RETURN . FALSE_KEY SEMICOLON  (43)
	return_stmt : RETURN . ID SEMICOLON  (44)
	return_stmt_void : RETURN . VOID SEMICOLON  (45)
	$$7 : .  (29)

	ID  shift 98
	VOID  shift 99
	TRUE_KEY  shift 100
	FALSE_KEY  shift 101
	CALL_STMT  reduce 29

	$$7  goto 102


state 64
	rest : LC_BRACE . body_method RC_BRACE  (21)

	IF  shift 44
	FOR  shift 45
	DECLARATION  shift 27
	EXPRESSION  shift 46
	CALL_STMT  shift 47
	RETURN  shift 63
	LC_BRACE  shift 64
	LOOP  shift 48
	POSTINCR  shift 28
	POSTDECR  shift 29
	.  error

	body_method  goto 103
	rest  goto 67
	rest_m  goto 68
	decls  goto 69
	stmts  goto 70
	exp_stmt  goto 71
	calls  goto 72
	return_stmt  goto 73
	return_stmt_void  goto 74
	unary_stmts  goto 55
	loops  goto 57
	cond_stmts  goto 58
	if_stmt  goto 59


state 65
	func_method : METHOD VOID ID LP_BRACE RP_BRACE $$1 LC_BRACE body . $$2 RC_BRACE  (7)
	$$2 : .  (6)

	.  reduce 6

	$$2  goto 104


state 66
	body : body_method .  (18)
	body_method : body_method . rest  (19)

	IF  shift 44
	FOR  shift 45
	DECLARATION  shift 27
	EXPRESSION  shift 46
	CALL_STMT  shift 47
	RETURN  shift 63
	LC_BRACE  shift 64
	LOOP  shift 48
	POSTINCR  shift 28
	POSTDECR  shift 29
	RC_BRACE  reduce 18

	rest  goto 105
	rest_m  goto 68
	decls  goto 69
	stmts  goto 70
	exp_stmt  goto 71
	calls  goto 72
	return_stmt  goto 73
	return_stmt_void  goto 74
	unary_stmts  goto 55
	loops  goto 57
	cond_stmts  goto 58
	if_stmt  goto 59


state 67
	body_method : rest .  (20)

	.  reduce 20


state 68
	rest : rest_m .  (22)

	.  reduce 22


state 69
	rest_m : decls .  (23)

	.  reduce 23


state 70
	rest_m : stmts .  (24)

	.  reduce 24


state 71
	rest_m : exp_stmt .  (25)

	.  reduce 25


state 72
	rest_m : calls .  (26)

	.  reduce 26


state 73
	rest_m : return_stmt .  (27)

	.  reduce 27


state 74
	rest_m : return_stmt_void .  (28)

	.  reduce 28


state 75
	dec : ID .  (64)

	.  reduce 64


state 76
	decls : DECLARATION RETURN_TYPE_FUNC dec . SEMICOLON  (61)
	dec : dec . COMMA ID  (63)

	SEMICOLON  shift 106
	COMMA  shift 107
	.  error


state 77
	decls : DECLARATION ID dec . SEMICOLON  (62)
	dec : dec . COMMA ID  (63)

	SEMICOLON  shift 108
	COMMA  shift 107
	.  error


state 78
	extras : INTEGERS .  (104)

	.  reduce 104


state 79
	extras : ID .  (103)

	.  reduce 103


state 80
	extras : ARGUMENTS .  (105)

	.  reduce 105


state 81
	extras : unary_stmts .  (102)

	.  reduce 102


state 82
	unary_stmts : POSTINCR LP_BRACE extras . RP_BRACE  (85)

	RP_BRACE  shift 109
	.  error


state 83
	unary_stmts : POSTDECR LP_BRACE extras . RP_BRACE  (86)

	RP_BRACE  shift 110
	.  error


state 84
	if_stmt : IF LP_BRACE . predicate RP_BRACE $$11 DO LC_BRACE body RC_BRACE  (58)
	extras : .  (101)

	CALL_STMT  shift 47
	LP_BRACE  shift 111
	NEG  shift 112
	ADD  shift 113
	SUB  shift 114
	MUL  shift 115
	DIV  shift 116
	POSTINCR  shift 28
	POSTDECR  shift 29
	INTEGERS  shift 78
	ID  shift 79
	ARGUMENTS  shift 80
	RP_BRACE  reduce 101
	ASSIGN  reduce 101
	PREDICATE_OP  reduce 101
	AND  reduce 101
	OR  reduce 101

	calls  goto 117
	unary_stmts  goto 81
	predicate  goto 118
	extras  goto 119
	expr_pred  goto 120
	arth_pred  goto 121


state 85
	loops : FOR LP_BRACE . exp_stmt predicate SEMICOLON unary_stmts RP_BRACE $$9 LC_BRACE body RC_BRACE  (52)
	loops : FOR LP_BRACE . exp_stmt predicate SEMICOLON RP_BRACE $$10 LC_BRACE body RC_BRACE  (54)

	EXPRESSION  shift 46
	.  error

	exp_stmt  goto 122


state 86
	exp_stmt : EXPRESSION ID . ASSIGN assign_exp SEMICOLON  (65)

	ASSIGN  shift 123
	.  error

